#
# Makefile.am for y2c_mail/agents
#
# $Id$
#

agent_SCRIPTS = ag_openca_openssl ag_ca_tools ag_openca_X509 

scrconf_DATA = \
	openca_openssl.scr \
	openssl.cnf.scr    \
	openssl.tmpl.scr   \
	opensslroot.tmpl.scr \
	ca_tools.scr         \
	openca_X509.scr

EXTRA_DIST = $(agent_SCRIPTS) $(scrconf_DATA)
